lab1/Test/L1-A-2-4.cmm
float K1W ( ) {
  struct dPbbjirEcla6hihe {
    int NJZ3F [ 920945421 ] [ 263803576 ] 1093449684 
      ] [ 96142278 ] , KHhpv ;
  }nlgv4H [ 1461191990 ] = ! . HZtJF__Sna / onwDrbp4M2XaAkVWDN 
    > f46LDUOKBQ7 > BzKA && WK_ejScAp3tJ06lfgPZ && xu9ONojGWJa0pW7IxY5 
    || MM2y_0yzoZL29 || jurG3ICHgR || UoaaMyBmRnTS4O ;
  if ZJq ( ) = mJbU7fp )   EevvOGzJTABr8zy ;
else   if ( e5waV9zeIlE4Ub )   Hpb2KIaj ;


  while ( - ZzJKoDfm = hve77xHiJ6nZ1Z_OBw )   XAer6MbXNJ7xf_Xk_4Ia 
    ;

  while ( xl2bck0gcN )   U_3fHKW1aInXH4Agb ;

}
float _DZwWaTQKjUtmW ( int QM8kTZSqtjS , struct iUeew 
  g2IIHDDzKQYh9vo , int syMxfjkOaNPI4L ) {
{
    float V1FcIr6G1zgjNCQ752 [ 2122558057 ] 1512473701 
      ] , YtJD ;
    int ww ;
    if ( XLj79TPEH1vTERZ5a )     flU0Yu ;

  }}
int kNFfq_ezMUF_m1 
;
